Fixing potential security hotspots